phase-4-eks/manifest-json-0/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: n8n
        image: docker.n8n.io/n8nio/n8n:2.3.4
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: n8n-pvc
          mountPath: /home/node/.n8n
        - name: secrets-store
          mountPath: /mnt/secrets-store
          readOnly: true
        securityContext:
          allowPrivilegeEscalation: false
      serviceAccountName: n8n-sa
      volumes:
      - name: n8n-pvc
        persistentVolumeClaim:
          claimName: n8n-pvc
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: n8n-aws-secrets
